add model for answer from gsonAPI