@@ -1,14 +1,17 @@
 package com.utils.services;
 
+import com.utils.models.NominatimResponse;
 import com.utils.models.Coordinates;
+
 import com.google.gson.Gson;
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
+import com.google.gson.reflect.TypeToken;
 import okhttp3.OkHttpClient;
 import okhttp3.Request;
 import okhttp3.Response;
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.util.List;
+import java.lang.reflect.Type;
 
 public class Geocoding {
     private final OkHttpClient client = new OkHttpClient();
@@ -32,19 +35,19 @@ public class Geocoding {
                 throw new IOException("Ошибка геокодирования: " + response.code());
             }
 
+            assert response.body() != null;
             String responseBody = response.body().string();
-            JsonArray results = gson.fromJson(responseBody, JsonArray.class);
 
-            if (results.size() == 0) {
+            Type responseType = new TypeToken<List<NominatimResponse>>(){}.getType();
+            List<NominatimResponse> results = gson.fromJson(responseBody, responseType);
+
+            if (results.isEmpty()) {
                 throw new IOException("Локация не найдена: " + locationName);
             }
 
-            JsonObject firstResult = results.get(0).getAsJsonObject();
-            double lat = firstResult.get("lat").getAsDouble();
-            double lon = firstResult.get("lon").getAsDouble();
-            String displayName = firstResult.get("display_name").getAsString();
+            NominatimResponse firstResult = results.getFirst();
 
-            return new Coordinates(lat, lon, displayName);
+            return new Coordinates(firstResult);
         }
     }
 }
